--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "vue",
+    "vue3",
+    "vue admin"
+  ],
+  "author": "solfKwolf",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.15.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.36.0",
     "eslint-plugin-vue": "^9.9.0",
     "less": "^4.1.3",
+    "tailwindcss": "^3.4.9",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
     "vue-tsc": "^1.2.0"
